@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-07T00:51:08Z",
+  "timestamp" : "2022-06-07T16:15:36Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 347,
-  "uniques" : 187,
+  "count" : 348,
+  "uniques" : 188,
   "clones" : [
     {
       "timestamp": "2022-05-29T00:00:00Z",
@@ -67,6 +67,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
