@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 4,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-06-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
